Sigil 0.6.0 TBA
    - Implement issue 1559: Add option to insert special characters into document.
    - Implement issue 1333: Add Hyperlink editor buttons to select target from existing ids and set id anchor.
    - Implement issue 401:  Add edit buttons for Uppercase, Lowercase, Propercase, Capitization.
    - Implement issue 985:  Sigil fonts should be configurable in Preferences.
    - Implement issue 1248: Code View/CSS should allow colors to be configurable in Preferences.
    - Implement issue 1153: Highlighted Text in Code view Difficult/Impossible to see.
    - Implement issue 1511: Prompt to replace an image when adding an image that already exists in the book.
    - Implement issue 1542: Add a Go to Style option to jump to the CSS class used by a tag.
    - Implement issue 1541: Heading styles should optionally remove/keep attributes in tags.
    - Implement issue 1540: Add option to tokenise spaces and numbers in F&R find text.
    - Implement issue 1539: Regex should support options for minimal matching, dot includes newlines.
    - Implement issue 1535: Add Clipboard History to automatically saved recent cut or copied text.
    - Implement issue 1534: Option to toggle Book View or Preview View to Code View and vice versa.
    - Implement issue 1528: Shortcut preferences should be simplified.
    - Implement issue 1536: Split at Chapter Markers should split all files.
    - Implement issue 1530: The heading dropdown should be changed to buttons for quicker selection.
    - Implement issue 1529: Code View should support heading/formatting buttons as used in Book View.
    - Implement issue 73: External HTML links should be usable but evoke warning dialog.
    - Implement issue 1521: Tab headers right click to close other tabs, toggle view state.
    - Implement issue 715: Search Editor for saving and executing Find & Replaces searches.
    - Implement issue 588: Clip Editor for saving and inserting text.