@@ -1,8 +1,9 @@
 Sigil 0.6.0 TBA
+    - Implement issue 1561: Add Save A Copy option to save file under a different name without renaming current file.
     - Implement issue 1559: Add option to insert special characters into document.
     - Implement issue 1333: Add Hyperlink editor buttons to select target from existing ids and set id anchor.
-    - Implement issue 401:  Add edit buttons for Uppercase, Lowercase, Propercase, Capitization.
-    - Implement issue 985:  Sigil fonts should be configurable in Preferences.
+    - Implement issue 401: Add edit buttons for Uppercase, Lowercase, Propercase, Capitization.
+    - Implement issue 985: Sigil fonts should be configurable in Preferences.
     - Implement issue 1248: Code View/CSS should allow colors to be configurable in Preferences.
     - Implement issue 1153: Highlighted Text in Code view Difficult/Impossible to see.
     - Implement issue 1511: Prompt to replace an image when adding an image that already exists in the book.
